# Margin

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  release.yml
cmake/: build_i18n.cmake  fetch_fonts.cmake  gen_nsis_license.py  plugin_i18n.cmake  version.rc.in
docs/: 01-architecture.md  02-install.md  03-build-from-source.md  04-plugin-spec.md  05-host-services.md  06-platform-support.md  07-privacy-security.md  09-testing.md  CONTRIBUTING.md
i18n/: host_en.ts  host_zh_CN.ts
packaging/: install.nsi.in
packaging/licenses/: LICENSE-OpenSSL.txt
scripts/: build-smoke.sh  migrate_i18n.py  regen-ts.sh
src/host/: CMakeLists.txt  main.cpp
src/host/core/: AboutDialog.cpp  AboutDialog.h  ActivityFeed.cpp  ActivityFeed.h  CMakeLists.txt  DashboardTabRegistry.cpp  DashboardTabRegistry.h  HostCore.cpp  HostCore.h  HostGeneralSettings.cpp  HostGeneralSettings.h  OverlayRegistry.cpp  OverlayRegistry.h  PluginManager.cpp  PluginManager.h  SettingsRegistry.cpp  SettingsRegistry.h  SystemTray.cpp  SystemTray.h
src/host/platform/: CMakeLists.txt  PlatformBackend.cpp  PlatformBackend.h
src/host/platform/windows/: ActiveWindowTrackerWin.cpp  ActiveWindowTrackerWin.h  IdleDetectorWin.cpp  IdleDetectorWin.h  PlatformBackendWin.cpp  PlatformBackendWin.h
src/host/security/: CMakeLists.txt  CryptoServiceImpl.cpp  CryptoServiceImpl.h  CryptoServicePool.cpp  CryptoServicePool.h  Keyring.cpp  Keyring.h
src/host/services/: CMakeLists.txt  DatabaseImpl.cpp  DatabaseImpl.h  HostServicesImpl.cpp  HostServicesImpl.h  Logger.cpp  Logger.h  QmlServiceImpl.h  Settings.cpp  Settings.h
src/host/ui/: AppIconProvider.cpp  AppIconProvider.h
src/paths/: CMakeLists.txt  Paths.cpp  Paths.h
src/plugin_api/: CMakeLists.txt
src/plugin_api/include/Margin/: AbiVersion.h  CryptoService.h  DashboardTabContributor.h  Database.h  EventBus.h  HostServices.h  InputMonitorService.h  LockService.h  Logger.h  OverlayContributor.h  PluginContext.h  PluginEntry.h  PluginInterface.h  QmlService.h  Result.h  Settings.h  SettingsPageContributor.h  TrayMenuContributor.h  TrayService.h  WindowMonitorService.h
src/plugin_api/src/: EventBus.cpp
src/plugins/aura_locker/: AuraLockerPlugin.cpp  AuraLockerPlugin.h  BluetoothProximityTracker.cpp  BluetoothProximityTracker.h  CMakeLists.txt  ProximityDetector.cpp  ProximityDetector.h  RssiSmoother.cpp  RssiSmoother.h  aura_locker.qrc  entry.cpp  manifest.json
src/plugins/aura_locker/i18n/: aura_en.ts  aura_zh_CN.ts
src/plugins/aura_locker/qml/: AuraSettingsPage.qml  AuraTab.qml  SignalStrengthBar.qml
src/plugins/aura_locker/win/: BluetoothProximityTrackerWin.cpp  BluetoothProximityTrackerWin.h
src/plugins/hello/: CMakeLists.txt  HelloPlugin.cpp  HelloPlugin.h  entry.cpp  manifest.json
src/plugins/rhythm/: CMakeLists.txt  PomodoroTimer.cpp  PomodoroTimer.h  RhythmPlugin.cpp  RhythmPlugin.h  entry.cpp  manifest.json  rhythm.qrc
src/plugins/rhythm/i18n/: rhythm_en.ts  rhythm_zh_CN.ts
src/plugins/rhythm/qml/: BreakOverlay.qml  NeckStretchAnimator.qml  RhythmSettingsPage.qml  RhythmTab.qml  RhythmToast.qml
src/plugins/screen_time/: CMakeLists.txt  CategoryMatcher.cpp  CategoryMatcher.h  ScreenTimePlugin.cpp  ScreenTimePlugin.h  SessionStore.cpp  SessionStore.h  default_categories.json  entry.cpp  manifest.json  screen_time.qrc
src/plugins/screen_time/i18n/: screen_time_en.ts  screen_time_zh_CN.ts
src/plugins/screen_time/qml/: ExportClearDialog.qml  ScreenTimeSettingsPage.qml  ScreenTimeTab.qml
src/resources/: host.qrc  tray.rc
src/resources/fonts/: .gitignore
src/ui/: CMakeLists.txt  DashboardWindow.qml  OverlayContainer.qml  OverviewTab.qml  SettingsAboutPage.qml  SettingsAppearancePage.qml  SettingsGeneralPage.qml  SettingsWindow.qml  StatusBar.qml  TabBar.qml  ui.qrc
src/ui/charts/: CMakeLists.txt  MBarChart.qml  MDonutChart.qml  MMiniBar.qml
src/ui/composite/: CMakeLists.txt  CircularTimer.qml  StatusCard.qml  TimerDisplay.qml
src/ui/primitives/: CMakeLists.txt  MButton.qml  MCard.qml  MIcon.qml  MListItem.qml  MSlider.qml  MSwitch.qml  ProgressDots.qml  Theme.qml
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_plugin_load_unload.cpp
tests/integration/fake_plugin/: CMakeLists.txt  fake_plugin.cpp  fake_plugin.h  manifest.json
tests/integration/fake_plugin_b/: CMakeLists.txt  fake_plugin_b.cpp  fake_plugin_b.h  manifest.json
tests/manual/: M0_ACCEPTANCE.md  M1_ACCEPTANCE.md  M2_ACCEPTANCE.md  M2_PRIVACY_AUDIT.md  M3_ACCEPTANCE.md
tests/smoke/: CMakeLists.txt  smoke_runner.py
tests/unit/: test_about_dialog.cpp  test_active_window_tracker.cpp  test_activity_feed.cpp  test_app_icon_provider.cpp  test_aura_encrypted_settings.cpp  test_aura_manifest_events.cpp  test_aura_recent_events_persist.cpp  test_aura_safety.cpp  test_aura_scan_stale_eviction.cpp  test_aura_settings_clamp.cpp  test_aura_tab.cpp  test_autostart_win.cpp  test_bluetooth_proximity_tracker.cpp  test_category_matcher.cpp  test_crypto_service.cpp  test_dark_title_bar.cpp  test_dashboard_registry_cache.cpp  test_dashboard_shell.cpp  test_dashboard_tab_contributor.cpp  test_database.cpp  test_event_bus.cpp  test_font_registration.cpp  test_idle_detector.cpp  test_keyring.cpp  test_lock_service.cpp  test_mbutton.cpp  test_mcard.cpp  test_micon.cpp  test_mlistitem.cpp  test_mslider.cpp  test_mswitch.cpp  test_neck_stretch_animator.cpp  test_overlay_registry.cpp  test_overview_tab.cpp  test_paths_migrate.cpp  test_pomodoro_timer.cpp  test_proximity_detector.cpp  test_qml_service.cpp  test_rhythm_aura_integration.cpp  test_rhythm_manifest_events.cpp  (+11 more)
